# rust-http-rendezvous-server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-bake.hcl  release.sh
.github/workflows/: ci.yaml  python.yaml  rust.yaml
scripts/: release.sh
server/: Cargo.toml
server/src/: main.rs
src/: handlers.rs  lib.rs  sessions.rs  tests.rs
synapse/: .gitignore  Cargo.toml  README.rst  pyproject.toml
synapse/src/: lib.rs
