[package]
name = "matrix-http-rendezvous"
version = "0.1.1"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"
description = "A Tower service which implements MSC3886"
repository = "https://github.com/matrix-org/rust-http-rendezvous-server/"
rust-version = "1.61"
exclude = ["/.github", ".gitignore"]

[dependencies]
axum = { version = "0.6.0-rc.2", features = ["headers"] }
base64ct = { version = "1.5.2", features = ["std"] }
bytes = "1.2.1"
headers = "0.3.8"
mime = "0.3.16"
sha2 = "0.10.6"
time = "0.3.15"
tokio = { version = "1.21.2", features = ["sync", "time"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1.37"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
hyper = "0.14.20"
tokio = { version = "1.21.2", features = ["macros", "rt", "test-util"] }

[workspace]
members = ["server", "synapse"]
