[package]
name = "matrix-http-rendezvous"
version = "0.1.9"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"
description = "A Tower service which implements MSC3886"
repository = "https://github.com/matrix-org/rust-http-rendezvous-server/"
rust-version = "1.61"
exclude = ["/.github", ".gitignore"]

[dependencies]
axum = { version = "0.6.1", features = ["headers"] }
base64ct = { version = "1.5.3", features = ["std"] }
bytes = "1.3.0"
headers = "0.3.8"
mime = "0.3.16"
sha2 = "0.10.6"
time = "0.3.17"
tokio = { version = "1.23.0", features = ["sync", "time"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.5", features = ["cors", "limit", "set-header"] }
tracing = "0.1.37"
ulid = { version = "1.0.0", features = ["serde"] }

[dev-dependencies]
hyper = "0.14.23"
tokio = { version = "1.23.0", features = ["macros", "rt", "test-util"] }

[workspace]
members = ["server", "synapse"]
