[package]
name = "matrix-http-rendezvous"
description = "A Tower service which implements MSC3886"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
exclude = ["/.github", ".gitignore", "/scripts"]

[dependencies]
axum = { version = "0.6.7", features = ["headers"] }
base64ct = { version = "1.5.3", features = ["std"] }
bytes = "1.4.0"
headers = "0.3.8"
mime = "0.3.16"
sha2 = "0.10.6"
time = "0.3.19"
tokio = { version = "1.25.0", features = ["sync", "time"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.3.5", features = ["cors", "limit", "set-header"] }
tracing = "0.1.37"
ulid = { version = "1.0.0", features = ["serde"] }

[dev-dependencies]
hyper = "0.14.24"
tokio = { version = "1.25.0", features = ["macros", "rt", "test-util"] }

[workspace]
members = ["server", "synapse"]

[workspace.package]
version = "0.1.11"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/matrix-org/rust-http-rendezvous-server/"
rust-version = "1.64"

[workspace.dependencies]
matrix-http-rendezvous = { path = "./", version = "0.1.11" }
