[package]
name = "matrix-http-rendezvous-server"
version = "0.1.6"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"
description = "A standalone server which implements MSC3886"
repository = "https://github.com/matrix-org/rust-http-rendezvous-server/"
rust-version = "1.61"

[dependencies]
bytesize = "1.1.0"
clap = { version = "4.0.14", features = ["derive"] }
humantime = "2.1.0"
hyper = { version = "0.14.20", features = ["server"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

matrix-http-rendezvous = { path = "../", version = "0.1.6" }
