[package]
name = "matrix-http-rendezvous-server"
version = "0.1.8"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"
description = "A standalone server which implements MSC3886"
repository = "https://github.com/matrix-org/rust-http-rendezvous-server/"
rust-version = "1.61"

[dependencies]
bytesize = "1.1.0"
clap = { version = "4.0.32", features = ["derive"] }
humantime = "2.1.0"
hyper = { version = "0.14.23", features = ["server"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

matrix-http-rendezvous = { path = "../", version = "0.1.8" }
