[package]
name = "matrix-http-rendezvous-synapse"
version = "0.1.9"
authors = ["Quentin Gliech <quenting@element.io>"]
edition = "2021"
license = "Apache-2.0"
description = "A Matrix Synapse module which implements MSC3886"
repository = "https://github.com/matrix-org/rust-http-rendezvous-server/"
rust-version = "1.61"
publish = false

[lib]
name = "matrix_http_rendezvous_synapse"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.68"
bytesize = { version = "1.1.0", features = ["serde"] }
http-body = "0.4.5"
humantime = "2.1.0"
humantime-serde = "1.1.1"
pyo3 = { version = "0.17.3", features = ["extension-module", "abi3-py37", "anyhow"] }
pyo3-asyncio = "0.17.0"
pyo3-log = "0.8.0"
pyo3-matrix-synapse-module = "0.1.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = "1.23.0"
tower = { version = "0.4.13", features = ["util"] }
tracing = { version = "0.1.37", features = ["log", "log-always"] }

matrix-http-rendezvous = { path = "../", version = "0.1.9" }
