[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "matrix_http_rendezvous_synapse"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Plugins",
]
description = "A Matrix Synapse module which implements MSC3886"
authors = [
    { name = "Quentin Gliech", email = "quenting@element.io" }
]

[tool.poetry]
name = "matrix_http_rendezvous_synapse"
version = "0.1.1"
description = "A Matrix Synapse module which implements MSC3886"
authors = ["Quentin Gliech <quenting@element.io>"]

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
matrix-synapse = "^1.66.0"
maturin = "^0.13.2"
